--- a/index.html
+++ b/index.html
@@ -1,2 +1,17 @@
-Hello World
-fdjsalfdsjl
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Sumit Sohani</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="web.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<p>Hello World! Welcome to Sumit Sohani's personal website.</p>
+
+</body>
+</html>
