A file was updated

--- a/index.html
+++ b/index.html
@@ -6,12 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" href="web.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <!--<script src="custom.js"></script>!-->
 </head>
 <body>
+<div id="wrapper">
+<div id="content"> 
+<div id="top-cont" style="height=auto;">
+<p style="margin-top:10px;">Hi there! I'm</p>
 
-<p>Hello World! Welcome to Sumit Sohani's personal website.</p>
+<p class="red large-font">Sumit Sohani</p>
 
+<p>and this is my (still under construction) website.<br><br> I'm a student at <span class="brown">Brown University</span> studying <span class="brown">Computer Science-Economics</span>.</p>
+<div class="border border-top"></div>
+</div>
+<div id="demo">
+<p id="contact">Always excited to <a href="mailto:sumit_sohani@brown.edu" class="link">talk</a>!</p>
+
+<div class="border border-bottom"></div>
+</div>
+</div>
+
+<div id="footer" class="footer"> Made with <i class="fa fa-heart-o" aria-hidden="true"></i> in Providence and Atlanta.</div>
+</div>
 </body>
 </html>
