--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <p class="red large-font">Sumit Sohani</p>
 
-<p>and this is my (still under construction) website.<br><br> I'm a student at <span class="brown">Brown University</span> studying <span class="brown">Computer Science-Economics</span>.</p>
+<p>and this is my (still under construction) website.<br><br> I'm a student at <span class="brown">Brown University</span> studying <br><span class="brown">Computer Science-Economics</span>.</p>
 <div class="border border-top"></div>
 </div>
 <div id="demo">
