--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="wrapper">
 <div id="content"> 
 <div id="top-cont" style="height=auto;">
-<p style="margin-top:10px;">Hi there! I'm</p>
+<p style="padding-top:20px;">Hi there! I'm</p>
 
 <p class="red large-font">Sumit Sohani</p>
 
