--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 </div>
 
-<div id="footer" class="footer"> Made with <i class="fa fa-heart-o" aria-hidden="true"></i> in Providence and Atlanta.</div>
+<div id="footer" class="footer"> Made with <i class="fa fa-heart-o" aria-hidden="true"></i> in PVD and ATL.</div>
 </div>
 </body>
 </html>
