--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
   <title>Sumit Sohani</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,6 +17,7 @@
   <div id="wrapper">
     <div id="content">
       <div class="D">SUMIT SOHANI</div>
+      <div class="normal">Be sure to check back soon - we're still <span class="emph"><i class="fa fa-wrench" aria-hidden="true"></i> under construction <i class="fa fa-wrench" aria-hidden="true"></i></span></div>
     </div>
     <div id="footer">
       <div class="footer-layer">
