--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         Made with 
         <i id="heart" class="fa fa-heart-o fa-heart" aria-hidden="true"></i> 
         in Atlanta 
-        <a href="https://www.youtube.com/watch?v=E5ONTXHS2mM"><img class="footer-icon panda" src="assets/panda.png" onmouseover="this.src='assets/panda-highlighted.png'" onmouseout="this.src='assets/panda.png'"></a> 
+        <!--<a href="https://www.youtube.com/watch?v=E5ONTXHS2mM"><img class="footer-icon panda" src="assets/panda.png" onmouseover="this.src='assets/panda-highlighted.png'" onmouseout="this.src='assets/panda.png'"></a>--> 
         and Providence 
-        <a href="https://twitter.com/justinbieber/status/6350337695?lang=en"><img class="footer-icon panda" src="assets/island.png" onmouseover="this.src='assets/island-highlighted.png'" onmouseout="this.src='assets/island.png'"></a>
+        <!--<a href="https://twitter.com/justinbieber/status/6350337695?lang=en"><img class="footer-icon panda" src="assets/island.png" onmouseover="this.src='assets/island-highlighted.png'" onmouseout="this.src='assets/island.png'"></a>-->
       </div>
       <div class="social-media">
         <a href="mailto:sumit_sohani@brown.edu"><i class="fa fa-envelope sm" aria-hidden="true"></i></a><a href="https://linkedin.com/in/sumit-sohani"><i class="fa fa-linkedin sm" aria-hidden="true"></i></a><a href="https://github.com/sumitsohani"><i class="fa fa-github sm" aria-hidden="true"></i></a><a href="https://www.facebook.com/sumitsohani"><i class="fa fa-facebook sm" aria-hidden="true"></i></a></div>
