--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script type="text/javascript">
-$(document).ready(updateSlideHolderSize);
-$(window).resize(updateSlideHolderSize);
-
+//$(document).ready(updateSlideHolderSize);
 function updateSlideHolderSize() {
   $(".particles-js-canvas-el").height($(".box").height() + 50);
   $("#particles-js").css({height:"auto"});
   $("#particles-js").height($("#particles-js").height() - 5);
 
 };
+    
+    $( window ).load( updateSlideHolderSize );
+$(window).resize(updateSlideHolderSize);
 </script>
   <style>
   :root {
